# witss

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
examples/: semirings.ipynb  signature.ipynb
iss/: __init__.py
iss/signature/: __init__.py  base.py  compute.py  semiring.py  weighting.py
iss/words/: __init__.py  word.py
tests/: test_arctic.py  test_bayesian.py  test_bow.py  test_signature.py  test_words.py
tests/signature/: test_base.py  test_cos.py  test_exp.py
witss/: __init__.py
witss/signature/: __init__.py  base.py  compute.py  semiring.py  weighting.py
witss/words/: __init__.py  generate.py  word.py
