[tool.poetry]
name = "witss"
version = "0.1.0"
description = "Python package for computing weighted iterated sums signatures"
authors = ["irkri <irkri@irkri.net>"]
license = "MIT"
license-files = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.2"
numba = "^0.60.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
nbformat = "^5.10.4"
plotly = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
